# mail-utilities-wizard

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  README.ru.md  config.yml-dev  config.yml-dist  config.yml-ru  docker-compose.yml  locale.yml-dist  locale.yml-ru
frontend/: package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: api.ts  config.ts  period.ts
frontend/src/routes/: +layout.ts  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/send/: +page.svelte
frontend/src/routes/success/: +page.svelte
frontend/tests/: test.ts
src/: auth.rs  logging.rs  main.rs  template.rs
src/config/: auth.rs  counter.rs  defaults.rs  file.rs  locale.rs  location.rs  mail.rs  mod.rs  page.rs
src/mail/: mod.rs
src/route/: auth.rs  check.rs  config.rs  counter.rs  dto.rs  mail.rs  mod.rs  session.rs  version.rs
src/state/: find.rs  history.rs  mod.rs  remove.rs
src/tests/: mail.rs  mod.rs  state.rs
templates/: example-ru.txt  example.txt
test-data/: rendered-template.txt  template.txt  test-config.yml  test-locale.yml
