[package]
name = "mail-utilities-wizard"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.86"

config = { version = "0.14.0", features = ["yaml"] }

non-blank-string-rs = "1.0.3"
email-type-rs = "1.0.1"

serde = { version = "1.0.204", features = ["derive"] }

tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"

tera = "1.20.0"

lettre = "0.11.7"

log = "0.4.22"
log4rs = "1.3.0"