[package]
name = "mail-utilities-wizard"
version = "1.3.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.87"

config = { version = "0.14.0", features = ["yaml"] }

non-blank-string-rs = "1.0.3"
email-type-rs = "1.0.1"

serde = { version = "1.0.210", features = ["derive"] }

tokio = { version = "1.40.0", features = ["full"] }
axum = {  version = "0.7.5", features = ["json","http1","tokio"] }
rust-embed = "8.5.0"

jsonwebtoken = "9.3.0"
tower-cookies = "0.10.0"

sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "sqlite" ] }

tera = "1.20.0"

lettre = "0.11.8"

mime_guess = "2.0.5"
chrono = { version = "0.4.38", features = ["serde"] }

log = "0.4.22"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.11.5"
fake = "2.9.2"
non-blank-string-rs = {  version = "1.0.3", features = ["utils"] }